# mkdocs-sidecode

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  vite.config.js
.github/workflows/: ci.yml  publish.yml
demo/: mkdocs.yml
demo/docs/: index.md  references.md
frontend/src/: runtime.js  runtime.test.js  styles.css
src/mkdocs_sidecode/: __init__.py  models.py  parser.py  plugin.py
src/mkdocs_sidecode/assets/: runtime.js  styles.css
tests/: test_parser.py  test_plugin.py
