[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "mkdocs-sidecode"
version = "0.1.1"
description = "MkDocs plugin for interactive side-by-side JavaScript documentation examples."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "MkDocs Sidecode Contributors" }
]
dependencies = [
  "mkdocs>=1.6",
]

[project.entry-points."mkdocs.plugins"]
sidecode = "mkdocs_sidecode.plugin:SidecodePlugin"

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mkdocs_sidecode"]

[tool.pytest.ini_options]
testpaths = ["tests"]
